# mandelbrot

./: main.py  mandel.py  pyproject.toml  render.py
